--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
               <img src="images/atractivo.gif" class="card-img-top" alt="photo 2">
               <div class="card-body">
                 <h3 class="card-title">Atractivo</h3>
-                <p class="card-text">Descripción breve del proyecto 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p class="card-text">Es clave que los espectadores conecten con el personaje, y para ello se utiliza este principio, el atractivo o appeal. </p>
               </div>
             </div>
           </div>
